# mcp-servers

./: README.md
ableton/: sudomcp.yml
arxiv/: readme.md  sudomcp.yml
benborla-mysql/: sudomcp.yml
brave-search/: sudomcp.yml
brightdata/: sudomcp.yml
browserbase/: sudomcp.yml
browsercat/: sudomcp.yml
bundles/: blockchain.yml  research.yml  travel.yml
clear-thought/: sudomcp.yml
context7/: sudomcp.yml
desktop-commander/: sudomcp.yml
doc-reader/: sudomcp.yml
duckduckgo-search/: sudomcp.yml
dune/: README.md  pyproject.toml  sudomcp.yml
dune/src/dune/: main.py
everything/: sudomcp.yml
evm-mcp-server/: sudomcp.yml
exa/: sudomcp.yml
excel/: sudomcp.yml
feishu/: sudomcp.yml
filesystem/: sudomcp.yml
flights-mcp/: sudomcp.yml
gmail/: sudomcp.yml
google-calendar/: sudomcp.yml
google-drive/: sudomcp.yml
google-maps/: sudomcp.yml
google-sheets/: fake_google_sheets_credentials.json  sudomcp.yml
google-sheets-test/: sudomcp.yml
hyperbrowser/: sudomcp.yml
memory-bank/: readme.md  sudomcp.yml
memory-bank-aakarsh/: readme.md  sudomcp.yml
memory-bank-ipospelov/: readme.md  sudomcp.yml
memory-graph/: readme.md  sudomcp.yml
mongodb-atlas/: readme.md  sudomcp.yml
mongodb-hosted/: sudomcp.yml
mongodb-local/: readme.md  sudomcp.yml
mysql/: sudomcp.yml
nasa/: readme.md  sudomcp.yml
neon/: sudomcp.yml
neon_local/: sudomcp.yml
notion/: sudomcp.yml
nutritionix-mcp/: sudomcp.yml
perplexity/: sudomcp.yml
playwright/: sudomcp.yml
simplecalc/: README.md  pyproject.toml  sudomcp.yml
simplecalc/src/simplecalc/: server.py
(+15 files in other folders)
