[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dune"
version = "0.1.0"
dependencies = [
    "mcp[cli]",
    "dotenv",
    "dune-client",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "mypy",
    "ruff",
    "black"
]

[project.scripts]
dune = "dune.main:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["dune"]

[tool.mypy]
strict = true
warn_unused_configs = true
warn_unreachable = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_any_unimported = true
# Conflict with pydantic.BaseModel
# disallow_any_explicit = true
# disallow_any_decorated = true
check_untyped_defs = true
extra_checks = true

[tool.black]
line-length = 80

[tool.ruff]
line-length = 80
lint.select = ["E", "F", "W"]  # Enable essential linting rules
