[project]
name = "simplecalc"
version = "0.1.0"
description = "A toy MCP calculator server"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.6.0",
    "uvicorn[standard]",
]
[[project.authors]]
name = "Todd Norton"
email = "todd@nebra.one"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
simplecalc = "simplecalc:main"
